fixing bug galeria, with overflow-y

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html{
-    position: relative
+    position: relative;
 }
 
 body{
